# variant_voice

./: .env.example  CLI.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  DOCKER.md  FEATURES.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  VARIANT_ANNOTATIONS.md  VARIANT_NORMALIZATION.md  agentic.md  architecture.md  embeddings.md  fda_test.py  logging.md  logging_plan.md  pyproject.toml
benchmarks/: README.md  gold_standard_snp.json  gold_standard_snp_big.json  gs_claude_45.json  sample_batch.json
benchmarks/validation_results/: error_analysis.json  latest_validation.json  validation_no_vicc.json
src/tumorboard/: __init__.py  cli.py  constants.py  engine.py
src/tumorboard/api/: __init__.py  cgi.py  civic.py  fda.py  myvariant.py  myvariant_models.py  oncotree.py  vicc.py
src/tumorboard/llm/: __init__.py  prompts.py  service.py
src/tumorboard/models/: __init__.py  annotations.py  assessment.py  validation.py  variant.py
src/tumorboard/models/evidence/: cgi.py  civic.py  clinvar.py  cosmic.py  evidence.py  fda.py  vicc.py
src/tumorboard/utils/: __init__.py  logging_config.py  variant_normalization.py
src/tumorboard/validation/: __init__.py  validator.py
streamlit/: Dockerfile  README.md  app.py  backend.py  docker-compose.yml
tests/: __init__.py  conftest.py  test_api.py  test_cgi.py  test_evidence_preprocessing.py  test_integration_fda.py  test_llm.py  test_models.py  test_oncotree.py  test_validation.py  test_variant_normalization.py  test_vicc.py
